src/test/deca/syntax/invalid/obtained_res/LValueNonValidsynt.res
./src/test/deca/syntax/invalid/created/RecognitionErrors/LValueNonValid.deca:10:8: no viable alternative at input '3'
